--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/Projetos/Weather-api/Src/Style/style.css">
+    <link rel="stylesheet" href="/Src/Style/style.css">
     <title>Previsão do tempo</title>
 </head>
 <body>
@@ -77,6 +77,7 @@
         </div>
         <div id="alert"></div>
     </div>
-    <script src="/Projetos/Weather-api/Src/Script/script.js"></script>
+    <script src="/Src/Script/script.js"></script>
 </body>
+
 </html>
