--- a/index.html
+++ b/index.html
@@ -74,12 +74,78 @@
                     </div>
                 </div>
             </div>
+
+            <div id="toggleContainer">
+                
+            </div>
+
+        <!--Informações por hora-->
+            <div id="hourForecast_container" class="show">
+                <div class="info">
+                    <h5 class="foracast_hour"lz>12:00</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_hour_temp">30 °C</h5>
+                </div>
+
+                <div class="info">
+                    <h5 class="foracast_hour">13:00</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_hour_temp">31 °C</h5>
+                </div>
+
+                <div class="info">
+                    <h5 class="foracast_hour">14:00</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_hour_temp">29 °C</h5>
+                </div>
+
+                <div class="info">
+                    <h5 class="foracast_hour">15:00</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_hour_temp">28 °C</h5>
+                </div>
+
+                <div class="info">
+                    <h5 class="foracast_hour">15:00</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_hour_temp">28 °C</h5>
+                </div>
+            </div>
+            <!--Informações por dia-->
+
+            <div id="dayForecast_container" class="show">
+                <div class="info">
+                    <h5 class="foracast_date">12 Fev</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_date_temp">30 °C</h5>
+                </div>
+
+                <div class="info">
+                    <h5 class="foracast_date">12 Fev</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_date_temp">30 °C</h5>
+                </div>
+
+                <div class="info">
+                    <h5 class="foracast_date">12 Fev</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_date_temp">30 °C</h5>
+                </div>
+
+                <div class="info">
+                    <h5 class="foracast_date">12 Fev</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_date_temp">30 °C</h5>
+                </div>
+
+                <div class="info">
+                    <h5 class="foracast_date">12 Fev</h5>
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
+                    <h5 class="foracast_date_temp">30 °C</h5>
+                </div>
         </div>
         <div id="alert"></div>
     </div>
     <script src="./Src/Script/script.js"></script>
 </body>
-
 </html>
-
-
