--- a/index.html
+++ b/index.html
@@ -82,66 +82,76 @@
         <!--Informações por hora-->
             <div id="hourForecast_container" class="show">
                 <div class="info">
-                    <h5 class="foracast_hour"lz>12:00</h5>
+                    <h5>12:00</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_hour_temp">30 °C</h5>
+                    <h5>30 °C</h5>
+                    <h5>10%</h5>
                 </div>
 
                 <div class="info">
-                    <h5 class="foracast_hour">13:00</h5>
+                    <h5>13:00</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_hour_temp">31 °C</h5>
+                    <h5>31 °C</h5>
+                    <h5>10%</h5>
                 </div>
 
                 <div class="info">
-                    <h5 class="foracast_hour">14:00</h5>
+                    <h5>14:00</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_hour_temp">29 °C</h5>
+                    <h5>29 °C</h5>
+                    <h5>10%</h5>
                 </div>
 
                 <div class="info">
-                    <h5 class="foracast_hour">15:00</h5>
+                    <h5>15:00</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_hour_temp">28 °C</h5>
+                    <h5>28 °C</h5>
+                    <h5>10%</h5>
                 </div>
 
                 <div class="info">
-                    <h5 class="foracast_hour">15:00</h5>
+                    <h5>15:00</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_hour_temp">28 °C</h5>
+                    <h5>28 °C</h5>
+                    <h5>10%</h5>
                 </div>
             </div>
             <!--Informações por dia-->
 
             <div id="dayForecast_container" class="show">
                 <div class="info">
-                    <h5 class="foracast_date">12 Fev</h5>
+                    <h5>12 Fev</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_date_temp">30 °C</h5>
+                    <h5>30 °C</h5>
+                    <h5>10%</h5>
                 </div>
 
                 <div class="info">
-                    <h5 class="foracast_date">12 Fev</h5>
+                    <h5>12 Fev</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_date_temp">30 °C</h5>
+                    <h5>30 °C</h5>
+                    <h5>10%</h5>
                 </div>
 
                 <div class="info">
-                    <h5 class="foracast_date">12 Fev</h5>
+                    <h5>12 Fev</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_date_temp">30 °C</h5>
+                    <h5>30 °C</h5>
+                    <h5>10%</h5>
                 </div>
 
                 <div class="info">
-                    <h5 class="foracast_date">12 Fev</h5>
+                    <h5>12 Fev</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_date_temp">30 °C</h5>
+                    <h5>30 °C</h5>
+                    <h5>10%</h5>
                 </div>
 
                 <div class="info">
-                    <h5 class="foracast_date">12 Fev</h5>
+                    <h5>12 Fev</h5>
                     <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="ícone_do_clima">
-                    <h5 class="foracast_date_temp">30 °C</h5>
+                    <h5>30 °C</h5>
+                    <h5>10%</h5>
                 </div>
         </div>
         <div id="alert"></div>
